Fixed more custom serializers
